# git-forensic

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: fuzz.yml
core/: Cargo.toml  README.md
core/src/: commit.rs  hash.rs  lib.rs  loose.rs  object.rs  pack.rs  reflog.rs  refs.rs  repo.rs  tree.rs
core/tests/: enumerate.rs  integration.rs  packfile.rs  reflog.rs  signatures.rs
docs/: index.md  privacy.md  terms.md
forensic/: Cargo.toml  README.md
forensic/src/: attribution.rs  lib.rs  reflog.rs  signatures.rs  unreachable.rs
forensic/tests/: attribution.rs  real_repo.rs  reflog.rs  signatures.rs  unreachable.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: commit.rs  delta.rs  loose.rs  tree.rs
git-forensic/: Cargo.toml
git-forensic/src/: commit.rs  error.rs  hash.rs  lib.rs  loose.rs  object.rs  pack.rs  refs.rs  repo.rs  tree.rs
git-forensic/tests/: integration.rs  packfile.rs
privacy/: index.html
search/: search_index.json
terms/: index.html
