[package]
name = "git-core"
version = "0.1.0"
description = "Git object-store reader: loose + packfile (v2, OFS/REF delta) objects, refs, commits, trees over a content-addressed Merkle DAG"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
flate2 = "1"
thiserror = "2"
hex = "0.4"
sha1 = "0.10"

[dev-dependencies]
tempfile = "3"
