[package]
name = "git-core"
version = "0.2.0"
description = "Git object-store reader: loose + packfile (v2, OFS/REF delta) objects, refs, commits, trees over a content-addressed Merkle DAG"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/SecurityRonin/git-forensic"
homepage = "https://github.com/SecurityRonin/git-forensic"
documentation = "https://docs.rs/git-core"
readme = "README.md"
keywords = ["forensics", "git", "dfir", "incident-response", "version-control"]
categories = ["parser-implementations", "development-tools"]
exclude = ["/fuzz", "/.github", "/docs"]

[dependencies]
flate2 = "1"
thiserror = "2"
hex = "0.4"
sha1 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
