[package]
name = "git-forensic"
version = "0.1.0"
description = "Forensic walker for Git content-addressed object stores: hash→commit→tree→blob Merkle DAG"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
flate2 = "1"
thiserror = "2"
hex = "0.4"
sha1 = "0.10"

[dev-dependencies]
tempfile = "3"
